# picohttpasio

./: .gitignore  CMakeLists.txt  LICENSE  README.md  build.zig  build.zig.zon
.github/workflows/: bench.yml  ci.yml
cmake/: FindSodium.cmake
examples/: CMakeLists.txt  coro_server.cpp  https_client.cpp  https_server.cpp  rest_api.cpp  simple_server.cpp  techempower_bench.cpp  websocket_client.cpp  websocket_echo.cpp
include/: client.hpp  coro_server.hpp  crypto.hpp  filereader.hpp  http_types.hpp  picohttpwrapper.hpp  request.hpp  response.hpp  router.hpp  server.hpp  ssl_context.hpp  static_files.hpp  websocket.hpp
src/: main.cpp  picohttpparser.c
tests/: test_coro.cpp  test_crypto.cpp  test_integration.cpp  test_parser.cpp  test_response.cpp  test_router.cpp  test_static_files.cpp  test_types.cpp  test_websocket.cpp
tests/certs/: server.key  server.pem
www/: index.html
