function(pico_example name)
    add_executable(${name} ${name}.cpp)
    target_link_libraries(${name} PRIVATE picohttpasio)
endfunction()

pico_example(simple_server)
pico_example(rest_api)
pico_example(websocket_echo)
pico_example(coro_server)
pico_example(https_server)
pico_example(techempower_bench)
